--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,22 @@
  * @Author: Asaf Ofer
  * @Date:   12-09-2017 18:33
  * @Last modified by:   Asaf Ofer
- * @Last modified time: 12-09-2017 18:33
+ * @Last modified time: 12-09-2017 19:04
  */
 
+#my_file_input{
+}
 
+html {
+  text-align: center;
+}
 
+.headline {
+  margin-top: 3%
+}
+
+.inputbutton {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
